# fires-to-fraud-gnn

./: .gitignore  README.md  check_env.py  main.py  pyproject.toml
docs/: FUTURE_RESEARCH.md  INTERVIEW_PREP.md  REASONING.md  REFACTOR_DOCS.md  REFACTOR_OVERVIEW.md
research/: build_graph_features.py  export_for_r.py  hovmoller.py  lightning_pan_eda.ipynb  make_figures.py  run_baselines.py  run_r_baselines.R  run_r_gtwr_only.R  train_gnn.py
src/predictor/atmospheric/: cleaners.py  ingestion.py  utils.py
src/predictor/core/: graph.py  ingestion.py  model.py  time_utils.py
